...
                                <rect key="frame" x="99" y="389" width="177" height="123"/>
                                <color key="backgroundColor" red="0.2470588235" green="0.76078431369999999" blue="0.51372549020000002" alpha="0.92492508559999997" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="177" id="03S-0X-x87"/>
                                    <constraint firstAttribute="height" constant="123" id="oCZ-bW-V6r"/>
                                </constraints>
                                <state key="normal" title="Mostrar"/>
                                <connections>
                                    <segue destination="IbR-HH-Nx2" kind="show" id="lFW-it-XZh"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                    <view key="view" contentMode="scaleToFill" id="8xt-VF-cy9">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="B04-Ic-cpn"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Car" id="giA-pQ-ZgD"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CXs-ZG-5QP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1051" y="827"/>
        </scene>
        <!--Test-->
        <scene sceneID="1Ei-Ja-eQ9">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q0L-aF-Ahn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Test" id="E1p-wc-yZS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nhf-vD-Sj4">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
